<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.heuboe.sdbby</groupId>
	<artifactId>strategie-matching</artifactId>
	<version>1.0.8</version>   

	<parent>
	    <groupId>de.heuboe.c2vba.base</groupId>
	    <artifactId>c2vba-base-parent</artifactId>
	    <version>0.0.1</version>
	</parent>
	
	<properties>
		<java.version>11</java.version>
		
		<cfg-svc-interface.version>1.16.17</cfg-svc-interface.version>
		<geo-man-interface.version>4.1.3</geo-man-interface.version>
		
		<jaxb.version>3.0</jaxb.version>
		<jaxb2-plugin.version>0.9.4</jaxb2-plugin.version>
		<spring.version>2.1.2.RELEASE</spring.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  		<kafka-tools.version>0.1.7</kafka-tools.version>
  		
        <mainClass>de.heuboe.sdbby.strategy.matching.Main</mainClass>
	</properties>
	
	<scm>  
		<url>https://gitlab.heuboe.hbintern/SdbBy/strategie-matching</url>
		<connection>scm:git:git@gitlab.heuboe.hbintern:SdbBy/strategie-matching.git</connection>
		<developerConnection>scm:git:git@gitlab.heuboe.hbintern:SdbBy/strategie-matching.git</developerConnection>
    </scm>
	
	
	<dependencies>
 		<dependency>
			<groupId>de.heuboe.base</groupId>
			<artifactId>jhbBase</artifactId>
		</dependency>  
		
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-basic</artifactId>
		</dependency>  

		
	    <!--  JAXB, JAXWS dependencies -->
		<dependency>
		    <groupId>javax.annotation</groupId>
		    <artifactId>javax.annotation-api</artifactId>
		</dependency>
		<dependency>
		    <groupId>javax.xml.bind</groupId>
		    <artifactId>jaxb-api</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.glassfish.jaxb</groupId>
		    <artifactId>jaxb-runtime</artifactId>
		</dependency>      
		<dependency>
    		<groupId>javax.xml.ws</groupId>
    		<artifactId>jaxws-api</artifactId>
		</dependency>
		<dependency>
		    <groupId>javax.jws</groupId>
		    <artifactId>jsr181-api</artifactId>
		    <version>1.0-MR1</version>
		</dependency>		

		<dependency>
			<groupId>de.heuboe.asfinag</groupId>
			<artifactId>vmis2-configservice-interface</artifactId>
			<version>${cfg-svc-interface.version}</version>
		</dependency>

		<dependency>
			<groupId>de.heuboe.asfinag</groupId>
			<artifactId>vmis2-grpc-interface-geomanager</artifactId>
			<version>${geo-man-interface.version}</version>
		</dependency>

		<dependency>
			<groupId>de.heuboe.base</groupId>
			<artifactId>jhbCsv</artifactId>
		</dependency>
		
		<dependency>
			<groupId>de.heuboe.sdbby</groupId>
			<artifactId>sdbby-interface</artifactId>
			<version>1.0.0</version>
		</dependency>
		

		<!-- Spring -->
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
				
			</exclusions>
		</dependency>
    	<dependency>
        	<groupId>org.springframework.boot</groupId>
        	<artifactId>spring-boot-starter-web</artifactId>
    	</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
		</dependency>
		
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-prometheus</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
		  	<groupId>net.devh</groupId>
		  	<artifactId>grpc-client-spring-boot-starter</artifactId>
		  	<version>2.10.1.RELEASE</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<!--  Kafka  -->

		<dependency>
	    	<groupId>de.heuboe.kafka</groupId>
			<artifactId>kafka-tools</artifactId>
			<version>${kafka-tools.version}</version>
	    </dependency>
	    
		<dependency>
			<groupId>de.heuboe.c2vba.data</groupId>
			<artifactId>c2vba-data</artifactId>
			<version>0.0.2</version>
		</dependency>
		
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        
        
        <!--  Testing --> 
        
		<dependency>
			<groupId>de.heuboe.base</groupId>
			<artifactId>jhbRegressionTest</artifactId>
			<version>0.2.8</version>
			<scope>test</scope>
		</dependency>
	
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            
            <exclusions>
	            <exclusion>
				    <groupId>com.vaadin.external.google</groupId>
				    <artifactId>android-json</artifactId>
	            </exclusion>
            </exclusions>
        </dependency>
        
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-commons</artifactId>
			<scope>test</scope>
		</dependency>
		
		<dependency>
		  	<groupId>org.junit.jupiter</groupId>
  			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		
		
	</dependencies>
	
	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-xjc-plugin</artifactId>
				<version>2.3.0</version>
				<configuration>
					<extensions>
						<extension>org.apache.cxf.xjcplugins:cxf-xjc-dv:2.3.0</extension>
					</extensions>
				</configuration>
				<executions>
					<execution>
						<id>generate-cfg-sources</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>xsdtojava</goal>
						</goals>
						<configuration>
							<sourceRoot>${basedir}/target/generated-sources/src/main/java</sourceRoot>
							<xsdOptions>
								<xsdOption>
									<xsd>src/main/resources/rules.xsd</xsd>
									<packagename>de.heuboe.sdbby.strategy.matching.data</packagename>
									<extensionArgs>
										<extensionArg>-Xvalue-constructor</extensionArg>
									</extensionArgs>
								</xsdOption>
							</xsdOptions>
						</configuration>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>org.jvnet.jaxb2_commons</groupId>
						<artifactId>jaxb2-fluent-api</artifactId>
						<version>${jaxb.version}</version>
						<type>jar</type>
					</dependency>
					<dependency>
						<groupId>org.jvnet.jaxb2_commons</groupId>
						<artifactId>jaxb2-value-constructor</artifactId>
						<version>${jaxb.version}</version>
						<type>jar</type>
					</dependency>
					<dependency>
						<groupId>org.jvnet.jaxb2_commons</groupId>
						<artifactId>jaxb2-basics</artifactId>
						<version>${jaxb2-plugin.version}</version>
						<type>jar</type>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<executions>
					<!-- Optional -->
					<!-- Build a tar file to allow local inspection -->
					<execution>
						<id>docker-build-tar</id>
						<phase>package</phase>
						<goals>
							<goal>buildTar</goal>
						</goals>
					</execution>
					<!-- Required -->
					<!-- Upload the image to the registry -->
					<execution>
						<id>docker-build</id>
						<phase>deploy</phase>
						<goals>
							<goal>build</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<from>
						<!-- ${docker.registry} is set via settings.xml 
						<image>${docker.registry}/adoptopenjdk/openjdk11:alpine-jre</image>
						-->
						<image>${docker.registry}/eclipse-temurin:17-jre-alpine</image>
					</from>
					<to>
						<!-- This change is important -->
						<image>${docker.registry}/heuboe/sdbby/${project.artifactId}:${project.version}</image>
					</to>
					<container>
						<jvmFlags>
							<!-- Flags für Spring -->
							<jvmFlag>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmFlag>
							<jvmFlag>-Dlogging.config=/config/log4j2.xml</jvmFlag>
							<jvmFlag>-Dspring.config.location=file:/config/</jvmFlag>
							<!-- Do not add flags such as -Xmx2G or other parameters here that 
								might be changed later on -->
						</jvmFlags>
						<mainClass>${mainClass}</mainClass>
						<ports>
							<!-- Ports with their function -->
							<port>8080</port><!-- actuator -->
						</ports>
						<labels>
							<version>${project.version}</version>
							<build.timestamp>${maven.build.timestamp}</build.timestamp>
							<!-- Metadata-derived from the git-commit-id-plugin -->
							<git.tags>${git.tags}</git.tags>
							<git.commit.id.abbrev>${git.commit.id.abbrev}</git.commit.id.abbrev>
							<git.commit.timestamp>${git.commit.time}</git.commit.timestamp>
						</labels>
						<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
						<filesModificationTime>${git.commit.time}</filesModificationTime>
					</container>
				</configuration>
			</plugin>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<verbose>false</verbose>
					<skipPoms>false</skipPoms>
					<dateFormat>yyyy-MM-dd'T'HH:mm:ss'Z'</dateFormat><!-- Required for dockering -->
					<dateFormatTimeZone>UTC</dateFormatTimeZone><!-- Required for dockering -->
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
					<failOnNoGitDirectory>false</failOnNoGitDirectory>
					<failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
					<excludeProperties>
						<!-- Requested to be excluded by colleague -->
						<excludeProperty>.*\.user\..*</excludeProperty>
						<!-- same here and we already have other build information files -->
						<excludeProperty>.*\.build\..*</excludeProperty>
					</excludeProperties>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>